# heavy-rock-novels

./: .gitignore  pyproject.toml
scripts/: epub_extract.py  light novel token count.py
